<resources>
    <string name="app_name">KenkoGym</string>

    <string name="login_user">Registro de Usuario</string>
    <string name="login_user_name">Nombre</string>
    <string name="login_user_weight">Peso (Kg)</string>
    <string name="login_user_height">Altura (m)</string>
    <string name="login_user_age">Edad</string>
    <string name="login_user_trainer">Soy entrenador</string>
    <string name="login_email">Correo Electrónico</string>
    <string name="login_psswd">Contraseña</string>
    <string name="login_psswd_confir">Confirme Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_register">Resgístrate</string>

    <string name="login_invalid_email">Correo electronico invalido</string>
    <string name="login_welcome">Bienvenido: %s </string>
    <string name="login_empty">Complete los datos requeridos </string>

    <string name="user_profile_weight">Peso</string>
    <string name="user_profile_height">Altura</string>
    <string name="user_profile_age">Edad</string>
    <string name="user_profile_hours">Horas entrenadas</string>
    <string name="user_profile_name">Kevin Luis Flores</string>

    <string name="user_students">Ver Usuarios</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="trainer_save">Guardar ejercicios</string>
    <string name="trainer_dont">No tienes ejercicios asignados</string>

</resources>
